--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <div class="section">
             <h2>Configuração</h2>
             <div>
-                <input type="text" id="apiKeyInput" placeholder="Sua API Key Alpha Vantage (obtenha em https://www.alphavantage.co/)">
+                <input type="text" id="65OWFHCLDQYUGUWK" placeholder="Sua API Key Alpha Vantage (obtenha em https://www.alphavantage.co/)">
                 <button id="saveApiKeyBtn">Salvar API Key</button>
             </div>
             <p class="loading">Plano gratuito permite 5 requisições por minuto</p>
